improved the code for BombPosition class